--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ THE SOFTWARE.
 <script type="text/javascript">
     RED.nodes.registerType('schedex', {
         category: 'input',
-        color: '#ED461F',
+        color: '#f37a33',
         defaults: {
             name: {value: ''},
             lat: {value: ''},
@@ -48,7 +48,7 @@ THE SOFTWARE.
             return this.name || 'schedex';
         },
         paletteLabel: 'schedex',
-        align: 'right',
+        align: 'left',
         oneditprepare: function () {
             if (!$("#node-input-lat").val().trim() && !$("#node-input-lon").val().trim()) {
                 if ('geolocation' in navigator) {
@@ -127,8 +127,6 @@ THE SOFTWARE.
 </script>
 
 <script type="text/x-red" data-help-name="schedex">
-    <p>A node that injects once on a particular date and time</p>
-    <h2>Description</h2>
+    <h1>SCHEDEX</h1>
     <p>Write me</p>
-
 </script>
