--- a/index.html
+++ b/index.html
@@ -128,5 +128,103 @@ THE SOFTWARE.
 
 <script type="text/x-red" data-help-name="schedex">
     <h1>SCHEDEX</h1>
-    <p>Write me</p>
+    <p>
+    Scheduler for node-red which allows you to enter on/off times as 24hr clock (e.g. 01:10) or suncalc events (e.g. goldenHour).
+It also allows you to offset times and randomise the time within the offset.
+
+Inspired by Pete Scargill's <a href="http://tech.scargill.net/big-timer/">BigTimer</a>
+
+    <h2>Times</h2>
+
+    </p>
+    <p>The times can be a 24 hour time or a <a href="https://github.com/mourner/suncalc" target="newWindow">suncalc</a> event:<p>
+    <table>
+        <thead>
+            <tr>
+                <th>Time</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><code>00:00 ... 23:59</code></td>
+                <td>a 24h time</td>
+            </tr>
+            <tr>
+                <td><code>sunrise</code></td>
+                <td>sunrise (top edge of the sun appears on the horizon)</td>
+            </tr>
+            <tr>
+                <td><code>sunriseEnd</code></td>
+                <td>sunrise ends (bottom edge of the sun touches the horizon)</td>
+            </tr>
+            <tr>
+                <td><code>goldenHourEnd</code></td>
+                <td>morning golden hour (soft light, best time for photography) ends</td>
+            </tr>
+            <tr>
+                <td><code>solarNoon</code></td>
+                <td>solar noon (sun is in the highest position)</td>
+            </tr>
+            <tr>
+                <td><code>goldenHour</code></td>
+                <td>evening golden hour starts</td>
+            </tr>
+            <tr>
+                <td><code>sunsetStart</code></td>
+                <td>sunset starts (bottom edge of the sun touches the horizon)</td>
+            </tr>
+            <tr>
+                <td><code>sunset</code></td>
+                <td>sunset (sun disappears below the horizon, evening civil twilight starts)</td>
+            </tr>
+            <tr>
+                <td><code>dusk</code></td>
+                <td>dusk (evening nautical twilight starts)</td>
+            </tr>
+            <tr>
+                <td><code>nauticalDusk</code></td>
+                <td>nautical dusk (evening astronomical twilight starts)</td>
+            </tr>
+            <tr>
+                <td><code>night</code></td>
+                <td>night starts (dark enough for astronomical observations)</td>
+            </tr>
+            <tr>
+                <td><code>nadir</code></td>
+                <td>nadir (darkest moment of the night, sun is in the lowest position)</td>
+            </tr>
+            <tr>
+                <td><code>nightEnd</code></td>
+                <td>night ends (morning astronomical twilight starts)</td>
+            </tr>
+            <tr>
+                <td><code>nauticalDawn</code></td>
+                <td>nautical dawn (morning nautical twilight starts)</td>
+            </tr>
+            <tr>
+                <td><code>dawn</code></td>
+                <td>dawn (morning nautical twilight ends, morning civil twilight starts)</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>Offsets</h2>
+
+    The on and off time can have an offset. This is specified in minutes:
+    <ul>
+        <li>-ve number brings the time forward. E.g. if the time is dusk and offset is -60, a message will be generated 60 minutes before dusk.</li>
+        <li>+ve number delays the time by the specified number of minutes</li>
+    </ul>
+
+    <h2>Randomisation of times</h2>
+
+    <p>Both on and off times can be randomised by ticking "Use random time within offset period". For example, if you specify dusk with
+and offset of -60 minutes, every day a message will be generated at a random time in a 60 minute window before dusk.  </p>
+
+    <h2>Inputs</h2>
+
+    You can wire inject nodes to the input of this node. To turn on manually, simply send a payload of 'on'. To turn off manually,
+    send a payload of 'off'. Injecting on or off causes this node emit the configured topic and payload. The manual mode is reset when the next on or off time is reached.
+
 </script>
