--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ THE SOFTWARE.
         </label>
     </div>
 
+
 </script>
 
 <script type="text/x-red" data-help-name="schedex">
@@ -241,6 +242,31 @@ and offset of -60 minutes, every day a message will be generated at a random tim
 
     You can wire inject nodes to the input of this node. To turn on manually, simply send a payload of 'on'. To turn off manually,
     send a payload of 'off'. Injecting on or off causes this node emit the configured topic and payload. The manual mode is reset when the next on or off time is reached.
+
+<h2>Programmatic Control</h2>
+
+    This node supports programmatic time control as well as configuration via the NodeRED UI. You can set the following:
+
+    <table><thead>
+<tr>
+<th>Property</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code>msg.payload.ontime</code></td>
+<td>String value as specified in the table above for time configuration</td>
+</tr>
+<tr>
+<td><code>msg.payload.offtime</code></td>
+<td>String value as specified in the table above for time configuration</td>
+</tr>
+<tr>
+<td><code>msg.payload.suspended</code></td>
+<td>Boolean: true will suspend scheduling, false will resume schduling</td>
+</tr>
+</tbody></table>
+
 
 
 </script>
