--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ THE SOFTWARE.
 </script>
 
 <script type="text/x-red" data-help-name="schedex">
+<!-- END -->
     <h1>SCHEDEX</h1>
     <p>
     Scheduler for node-red which allows you to enter on/off times as 24hr clock (e.g. 01:10) or suncalc events (e.g. goldenHour).
@@ -267,6 +268,6 @@ and offset of -60 minutes, every day a message will be generated at a random tim
 </tr>
 </tbody></table>
 
-
+<!-- END -->
 
 </script>
