Anchors for readme replacement in index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ THE SOFTWARE.
 </script>
 
 <script type="text/x-red" data-help-name="schedex">
-<!-- END -->
+<!-- START -->
     <h1>SCHEDEX</h1>
     <p>
     Scheduler for node-red which allows you to enter on/off times as 24hr clock (e.g. 01:10) or suncalc events (e.g. goldenHour).
