--- a/index.html
+++ b/index.html
@@ -137,123 +137,107 @@ THE SOFTWARE.
 
 <script type="text/x-red" data-help-name="schedex">
 <!-- START -->
-    <h1>SCHEDEX</h1>
-    <p>
-    Scheduler for node-red which allows you to enter on/off times as 24hr clock (e.g. 01:10) or suncalc events (e.g. goldenHour).
-It also allows you to offset times and randomise the time within the offset.
-
-Inspired by Pete Scargill's <a href="http://tech.scargill.net/big-timer/">BigTimer</a>
-
-    <h2>Suspending scheduling</h2>
-    The 'Suspend scheduling' checkbox allows you to disable time scheduling. If scheduling is suspended, Schedex will only generate output events
-    upon receipt of input 'on' and 'off' events (see below).
-
-     This setting is provided for the situation where you temporarily don't want time based activation and don't want to
-     rewire your Node-RED flow.
-
-    <h2>Times</h2>
-
-    </p>
-    <p>The times can be a 24 hour time or a <a href="https://github.com/mourner/suncalc" target="newWindow">suncalc</a> event:<p>
-    <table>
-        <thead>
-            <tr>
-                <th>Time</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><code>00:00 ... 23:59</code></td>
-                <td>a 24h time</td>
-            </tr>
-            <tr>
-                <td><code>sunrise</code></td>
-                <td>sunrise (top edge of the sun appears on the horizon)</td>
-            </tr>
-            <tr>
-                <td><code>sunriseEnd</code></td>
-                <td>sunrise ends (bottom edge of the sun touches the horizon)</td>
-            </tr>
-            <tr>
-                <td><code>goldenHourEnd</code></td>
-                <td>morning golden hour (soft light, best time for photography) ends</td>
-            </tr>
-            <tr>
-                <td><code>solarNoon</code></td>
-                <td>solar noon (sun is in the highest position)</td>
-            </tr>
-            <tr>
-                <td><code>goldenHour</code></td>
-                <td>evening golden hour starts</td>
-            </tr>
-            <tr>
-                <td><code>sunsetStart</code></td>
-                <td>sunset starts (bottom edge of the sun touches the horizon)</td>
-            </tr>
-            <tr>
-                <td><code>sunset</code></td>
-                <td>sunset (sun disappears below the horizon, evening civil twilight starts)</td>
-            </tr>
-            <tr>
-                <td><code>dusk</code></td>
-                <td>dusk (evening nautical twilight starts)</td>
-            </tr>
-            <tr>
-                <td><code>nauticalDusk</code></td>
-                <td>nautical dusk (evening astronomical twilight starts)</td>
-            </tr>
-            <tr>
-                <td><code>night</code></td>
-                <td>night starts (dark enough for astronomical observations)</td>
-            </tr>
-            <tr>
-                <td><code>nadir</code></td>
-                <td>nadir (darkest moment of the night, sun is in the lowest position)</td>
-            </tr>
-            <tr>
-                <td><code>nightEnd</code></td>
-                <td>night ends (morning astronomical twilight starts)</td>
-            </tr>
-            <tr>
-                <td><code>nauticalDawn</code></td>
-                <td>nautical dawn (morning nautical twilight starts)</td>
-            </tr>
-            <tr>
-                <td><code>dawn</code></td>
-                <td>dawn (morning nautical twilight ends, morning civil twilight starts)</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <h2>Offsets</h2>
-
-    The on and off time can have an offset. This is specified in minutes:
-    <ul>
-        <li>-ve number brings the time forward. E.g. if the time is dusk and offset is -60, a message will be generated 60 minutes before dusk.</li>
-        <li>+ve number delays the time by the specified number of minutes</li>
-    </ul>
-
-    <h2>Randomisation of times</h2>
-
-    <p>Both on and off times can be randomised by ticking "Use random time within offset period". For example, if you specify dusk with
-and offset of -60 minutes, every day a message will be generated at a random time in a 60 minute window before dusk.  </p>
-
-    <h2>Inputs</h2>
-
-    You can wire inject nodes to the input of this node. To turn on manually, simply send a payload of 'on'. To turn off manually,
-    send a payload of 'off'. Injecting on or off causes this node emit the configured topic and payload. The manual mode is reset when the next on or off time is reached.
-
-<h2>Programmatic Control</h2>
-
-    This node supports programmatic time control as well as configuration via the NodeRED UI. You can set the following:
-
-    <table><thead>
+<h1 id="schedex">Schedex</h1>
+<p>Scheduler for node-red which allows you to enter on/off times as 24hr clock (e.g. 01:10) or suncalc events (e.g. goldenHour).<br>It also allows you to offset times and randomise the time within the offset.</p>
+<p>Inspired by Pete Scargill&#39;s <a href="http://tech.scargill.net/big-timer/">BigTimer</a></p>
+<h1 id="configuration">Configuration</h1>
+<h2 id="suspending-scheduling">Suspending scheduling</h2>
+<p>The &#39;Suspend scheduling&#39; checkbox allows you to disable time scheduling. If scheduling is suspended,<br>Schedex will only generate output events upon receipt of input &#39;on&#39; and &#39;off&#39; events (see below).</p>
+<p>This setting is provided for the situation where you temporarily don&#39;t want time based activation<br>and don&#39;t want to rewire your Node-RED flow.</p>
+<h2 id="times">Times</h2>
+<p>The times can be a 24 hour time or a <a href="https://github.com/mourner/suncalc">suncalc</a> event:</p>
+<table>
+<thead>
 <tr>
-<th>Property</th>
+<th>Time</th>
 <th>Description</th>
 </tr>
-</thead><tbody>
+</thead>
+<tbody>
+<tr>
+<td><code>00:00 ... 23:59</code></td>
+<td>24hr time</td>
+</tr>
+<tr>
+<td><code>sunrise</code></td>
+<td>sunrise (top edge of the sun appears on the horizon)</td>
+</tr>
+<tr>
+<td><code>sunriseEnd</code></td>
+<td>sunrise ends (bottom edge of the sun touches the horizon)</td>
+</tr>
+<tr>
+<td><code>goldenHourEnd</code></td>
+<td>morning golden hour (soft light, best time for photography) ends</td>
+</tr>
+<tr>
+<td><code>solarNoon</code></td>
+<td>solar noon (sun is in the highest position)</td>
+</tr>
+<tr>
+<td><code>goldenHour</code></td>
+<td>evening golden hour starts</td>
+</tr>
+<tr>
+<td><code>sunsetStart</code></td>
+<td>sunset starts (bottom edge of the sun touches the horizon)</td>
+</tr>
+<tr>
+<td><code>sunset</code></td>
+<td>sunset (sun disappears below the horizon, evening civil twilight starts)</td>
+</tr>
+<tr>
+<td><code>dusk</code></td>
+<td>dusk (evening nautical twilight starts)</td>
+</tr>
+<tr>
+<td><code>nauticalDusk</code></td>
+<td>nautical dusk (evening astronomical twilight starts)</td>
+</tr>
+<tr>
+<td><code>night</code></td>
+<td>night starts (dark enough for astronomical observations)</td>
+</tr>
+<tr>
+<td><code>nadir</code></td>
+<td>nadir (darkest moment of the night, sun is in the lowest position)</td>
+</tr>
+<tr>
+<td><code>nightEnd</code></td>
+<td>night ends (morning astronomical twilight starts)</td>
+</tr>
+<tr>
+<td><code>nauticalDawn</code></td>
+<td>nautical dawn (morning nautical twilight starts)</td>
+</tr>
+<tr>
+<td><code>dawn</code></td>
+<td>dawn (morning nautical twilight ends, morning civil twilight starts)</td>
+</tr>
+</tbody>
+</table>
+<h2 id="offsets">Offsets</h2>
+<p>The on and off time can have an offset. This is specified in minutes:</p>
+<ul>
+<li>-ve number brings the time forward. E.g. if the time is dusk and offset is -60, a message will be generated 60 minutes before dusk.</li>
+<li>+ve number delays the time by the specified number of minutes</li>
+</ul>
+<h2 id="randomisation-of-times">Randomisation of times</h2>
+<p>Both on and off times can be randomised by ticking &quot;Use random time within offset period&quot;. For example, if you specify dusk with<br>an offset of -60 minutes, every day a message will be generated at a random time in a 60 minute window before dusk.</p>
+<h2 id="inputs">Inputs</h2>
+<p>You can wire inject nodes to the input of this node. To turn on manually, simply send a payload of &#39;on&#39;. To turn off manually,<br>send a payload of &#39;off&#39;. Injecting on or off causes this node emit the configured topic and payload. The manual mode is reset when the next on or off time is reached.</p>
+<h2 id="programmatic-control">Programmatic Control</h2>
+<p>This node supports programmatic time control as well as configuration via the NodeRED UI. </p>
+<p><strong>It is very important to note that properties set programmatically in this manner are transient. They will not persist over a NodeRED restart<br>or redeploy!</strong></p>
+<p>You can set the following:</p>
+<table>
+<thead>
+<tr>
+<th>Property</th>
+<th>Type</th>
+</tr>
+</thead>
+<tbody>
 <tr>
 <td><code>msg.payload.ontime</code></td>
 <td>String value as specified in the table above for time configuration</td>
@@ -266,8 +250,31 @@ and offset of -60 minutes, every day a message will be generated at a random tim
 <td><code>msg.payload.suspended</code></td>
 <td>Boolean: true will suspend scheduling, false will resume schduling</td>
 </tr>
-</tbody></table>
-
+</tbody>
+</table>
+<p>Alternatively, you can send msg.payload as a string with the following values </p>
+<table>
+<thead>
+<tr>
+<th>Example msg.payload</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>ontime 12:00</code></td>
+<td>Time as specified in the table above for time configuration</td>
+</tr>
+<tr>
+<td><code>offtime dusk</code></td>
+<td>Time as specified in the table above for time configuration</td>
+</tr>
+<tr>
+<td><code>suspended true</code></td>
+<td>true will suspend scheduling, false will resume schduling</td>
+</tr>
+</tbody>
+</table>
 <!-- END -->
 
 </script>
