correct typo due to S/R

--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@ THE SOFTWARE.
 <td>Time as specified in the table above for time configuration</td>
 </tr>
 <tr>
-<td><code>ontopic my[topic</code></td>
+<td><code>ontopic my_topic</code></td>
 <td>Override the topic for the on event (no spaces)</td>
 </tr>
 <tr>
-<td><code>onpayload my[payload</code></td>
+<td><code>onpayload my_payload</code></td>
 <td>Override the payload for the on event (no spaces)</td>
 </tr>
 <tr>
@@ -350,11 +350,11 @@ THE SOFTWARE.
 <td>Time as specified in the table above for time configuration</td>
 </tr>
 <tr>
-<td><code>offtopic my[topic</code></td>
+<td><code>offtopic my_topic</code></td>
 <td>Override the topic for the off event (no spaces)</td>
 </tr>
 <tr>
-<td><code>offpayload my[payload</code></td>
+<td><code>offpayload my_payload</code></td>
 <td>Override the payload for the off event (no spaces)</td>
 </tr>
 <tr>
