--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@ THE SOFTWARE.
             <label for="node-input-ontimetod"><i class="fa fa-clock-o"></i> Time (24hr)</label>
             <input type="text" id="node-input-ontimetod" placeholder="HH:mm">
         </div>
+        <div class="form-tips eztimer-ontype eztimer-ontype-time" style="margin-bottom: 12px;">
+            <b>Note:</b> Time <i>must</i> be specified in HH:mm:ss (24hr) format, eg. 14:21:00.
+        </div>
         <div class="form-row eztimer-ontype eztimer-ontype-sun eztimer-ontype-time">
             <label for="node-input-onoffset"><i class="fa fa-clock-o"></i> Offset (mins)</label>
             <input type="number" id="node-input-onoffset" placeholder="0">
@@ -341,6 +344,9 @@ THE SOFTWARE.
             <label for="node-input-offtimetod"><i class="fa fa-clock-o"></i> Time (24hr)</label>
             <input type="text" id="node-input-offtimetod" placeholder="HH:mm">
         </div>
+        <div class="form-tips eztimer-offtype eztimer-offtype-time" style="margin-bottom: 12px;">
+            <b>Note:</b> Time <i>must</i> be specified in HH:mm:ss (24hr) format, eg. 14:21:00.
+        </div>
         <div class="form-row eztimer-offtype eztimer-offtype-sun eztimer-offtype-time">
             <label for="node-input-offoffset"><i class="fa fa-clock-o"></i> Offset (mins)</label>
             <input type="number" id="node-input-offoffset" placeholder="0">
@@ -348,6 +354,9 @@ THE SOFTWARE.
         <div class="form-row eztimer-offtype eztimer-offtype-duration">
             <label for="node-input-offduration"><i class="fa fa-clock-o"></i> Duration</label>
             <input type="text" id="node-input-offduration" placeholder="HH:mm:ss">
+        </div>
+        <div class="form-tips eztimer-offtype eztimer-offtype-duration" style="margin-bottom: 12px;">
+            <b>Note:</b> Duration <i>must</i> be specified in HH:mm:ss format, eg. if you want a run-time of 1 minute, use 00:01:00.
         </div>
         <div class="form-row eztimer-offtype eztimer-offtype-sun eztimer-offtype-time">
             <label style="margin-left: 100px; width: 70%">
